[2006-11-20] Akita - 0.9.2 released

[2006-11-20] Akita 
  Put in some basic compensation for spiky servers.

[2006-11-20] Akita 
  Fixed rate display so it doesn't show Bb/s when we get a crazy slow rating.

[2006-11-17] Akita - 0.9 released
